# toadua-anki

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.json  config.md  manifest.json  pyproject.toml
json/: notetype.json
qt/: entry.ui  toadua.ui
toaduanki/: __init__.py  config.py  toadua.py  ui.py
