[project]
name = "toadua-anki"
version = "0.1.0"
description = "Converts Toadua entries into Anki cards"
authors = [
    {name = "Mazzie", email = "mazziechai@gmail.com"},
]
dependencies = [
    "aqt[qt6]>=2.1.64",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
pkg = { shell = "zip -r toaduanki.ankiaddon manifest.json config.json config.md json && cd toaduanki && zip -r ../toaduanki.ankiaddon *" }
ui = "pyuic6 -o toaduanki/toadua_ui.py qt/toadua.ui"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "pre-commit>=3.3.2",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
[tool.setuptools.packages.find]
exclude = ["qt", "json"]
